projWebsite/style.css
@import url('https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700&display=swap');


* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Syne', sans-serif;
    scroll-behavior: smooth;
}


/* Adding All My Section Tag Fixed Padding */
section {
    padding: 80px;
}



/*Creating Banner Area in CSS */

.banner {
    position: relative;
    min-height: 100vh;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background: #111;
    background: url(images/For\ My\ Site\ Best.jpg);
    background-size: cover;
    background-position: right center;
}

.banner h2 {
    font-size: 2.5em;
    color: #555;
    font-weight: 300;
    line-height: 1.5em;
}

.banner h2 span {
    font-size: 1.2em;
    color: #efefef;
}

.banner h3 {
    color: #fff;
    font-size: 1.5em;
    font-weight: 500;
}

.btn {
    position: relative;
    background: #55127f;
    display: inline-block;
    color: #000;
    margin-top: 20px;
    padding: 10px 30px;
    text-decoration: none;
    text-transform: uppercase;
    letter-spacing: 2px;
    font-weight: 500;
    font-size: 18px;
    transition: 0.2s;
}

.banner .btn:hover {
    letter-spacing: 6px;
}



/* Creating About Me Layout in CSS */

.heading {
    width: 100%;
    text-align: center;
    margin-bottom: 30px;
    color: #111;
}

.heading p {
    font-style: "Syne";
    font-size: 14px;
}

.heading h2 {
    font-size: 3em;
    color: #d20a84
}


.content {
    display: flex;
    justify-content: space-between;
}

.contentBx {
    padding-left: 40px;
    text-align: justify;
}


.proPic {
    width: 300px;
    height: 350px;
    border-top-left-radius: 30%;
    border-bottom-right-radius: 30%;
}


.contentBx h2 {
    font-weight: 300;
    margin-bottom: 10px;
}

.heading.bottom {
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    align-items: center;
}



.heading.bottom .btn.round {
    transition: 0.8s;
}



.heading.bottom .btn.round:hover {
    transform: scale(0.80) translateY(-10px);
}





.btn.round {
    border-radius: 50px;
}

#cover {
    font-size: 10px;
    font-weight: 800;
    width: 149.25px;
}

.bt {
    margin-top: 20px;
}

.w50 {
    min-width: 25%;
}

img {
    max-width: 100%;
}

/*********CSS For The Video*********/

.showcase {
    position: relative;
    right: 0;
    width: 100%;
    min-height: 100vh;
    padding: 100px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background: #111;
    color: #fff;
    z-index: 2;
    /*box-sizing: border-box;
    margin: 0;
    padding: 0;*/
}

.showcase header {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    padding: 40px 100px;
    z-index: 1000;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.logo {
    text-transform: uppercase;
    cursor: pointer;
}

.toggle {
    position: relative;
    width: 60px;
    height: 60px;
    cursor: pointer;
}

.showcase video {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    opacity: 0.8;
}

.overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: #55127f;
    mix-blend-mode: overlay;
}

.text {
    position: relative;
    z-index: 10;
}

.text h2 {
    font-size: 5em;
    font-weight: 800;
    line-height: 1em;
    text-transform: uppercase;
}

.text h3 {
    font-size: 4em;
    font-weight: 700;
    line-height: 1em;
    text-transform: uppercase;
}

.text p {
    font-size: 1.1em;
    margin: 20px 0;
    font-weight: 400;
    max-width: 700px;
}

.text a {
    display: inline-block;
    font-size: 1em;
    background: #fff;
    padding: 10px 30px;
    text-decoration: none;
    color: #111;
    margin-top: 10px;
    text-transform: uppercase;
    letter-spacing: 2px;
    transition: 0.2s;
}

.text a:hover {
    letter-spacing: 6px;
}

@media(max-width: 991px) {
    .showcase, .showcase header {
        padding: 40px;
    }

    .text h2 {
        font-size: 3em;
    }

    .text h3 {
        font-size: 2em;
    }
    
}






/*Creating Logo & Menu's Header Using CSS*/

header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    padding: 40px 100px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    z-index: 2;
    transition: 0.5s;
}

header .logo {
    color: #fff;
    text-decoration: none;
    text-transform: uppercase;
    font-size: 24px;
    font-weight: 700;
    letter-spacing: 2px;
}

header ul {
    position: relative;
    display: flex;
}

header ul li {
    list-style-type: none;
    position: relative;

}

header ul li a {
    position: relative;
    display: inline-block;
    margin: 0px 15px;
    text-decoration: none;
    color: #fff;
}

/* Creating Sticky Header Menu Nav Bar In CSS*/

header.sticky {
    background: #fff;
    padding: 20px 100px;
    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
}

header.sticky .logo,
header.sticky ul li a {
    color: #111;
}

/*Progress Bars*/
  
.progress {
  width: 100%;
  max-width: 260px;
  height: 6px;
  background: #e1e4e8;
  border-radius: 3px;
  overflow: hidden;
}
  
  .progress-bar {
    display: block;
    height: 100%;
    background: linear-gradient(90deg,#009e66,#0d71cf 17%,#05dfe6 34%,#0ad89a 51%,#009e66 68%,#0d71cf 85%,#05dfe6 );
    background-size: 300% 100%;
    animation: progress-animation 2s linear infinite;
  }
    
  @keyframes progress-animation {
    0% {
      background-position: 100%;
    }
    100% {
      background-position: 0;
    }
  }


/* Designing Services Layout in CSS*/

.services {
    background: #111;
}

.heading.white p {
    color: white;
}

.services .content {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    flex-direction: row;
}
/* ... */

